// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bullet > Double-byte space indent 1`] = `
[
  {
    "indent": 1,
    "nodes": [
      {
        "raw": "Double-byte space",
        "text": "Double-byte space",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`bullet > Multi lines bullet 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "no bullet (indent: 0)",
        "text": "no bullet (indent: 0)",
        "type": "plain",
      },
    ],
    "type": "line",
  },
  {
    "indent": 1,
    "nodes": [
      {
        "raw": "first bullet (indent: 1)",
        "text": "first bullet (indent: 1)",
        "type": "plain",
      },
    ],
    "type": "line",
  },
  {
    "indent": 2,
    "nodes": [
      {
        "raw": "second bullet (indent: 2)",
        "text": "second bullet (indent: 2)",
        "type": "plain",
      },
    ],
    "type": "line",
  },
  {
    "indent": 3,
    "nodes": [
      {
        "raw": "third bullet (indent: 3)",
        "text": "third bullet (indent: 3)",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`bullet > Single-byte space indent 1`] = `
[
  {
    "indent": 1,
    "nodes": [
      {
        "raw": "Single-byte space",
        "text": "Single-byte space",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`bullet > Tab indent 1`] = `
[
  {
    "indent": 1,
    "nodes": [
      {
        "raw": "Tab",
        "text": "Tab",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;
